@@ -200,6 +200,21 @@
   (:documentation
    "This is like CL:FILE-POSITION, but for Gray streams."))
 
+(defgeneric stream-file-descriptor (stream &optional direction)
+  (:documentation
+   "Return the file-descriptor underlaying STREAM, or NIL if not
+   available. DIRECTION must be either :INPUT, or :OUTPUT and is
+   supposed to discriminate in case STREAM is a bidirectional
+   stream. DIRECTION is supposed to default to :INPUT.
+
+   An error is signaled if DIRECTION is :INPUT (:OUTPUT), and STREAM
+   is not an input (output) stream. A system-provided :BEFORE method
+   handles this case; user methods do not need to take care of it.
+
+   In case STREAM-FILE-DESCRIPTOR is not implemented for STREAM, an
+   error is signaled. That is, users must add methods to explicitly
+   decline by returning NIL."))
+
 
 ;;;
 ;;; Our class hierarchy looks like the one from Gray streams
@@ -608,6 +623,48 @@
 
 (defmethod stream-terpri ((stream t))
   (bug-or-error stream 'stream-terpri))
+
+
+;;; FILE-DESCRIPTOR
+
+(defmethod stream-file-descriptor :before (stream &optional (direction :input))
+  (multiple-value-bind (predicate kind)     
+      (case direction
+        (:input  (values 'input-stream-p  "input"))
+        (:output (values 'output-stream-p "output"))
+        (t
+         (error 'simple-type-error
+                :format-control "Not a valid direction, ~S; must be one of ~
+                                 :INPUT or :OUTPUT."
+                :format-arguments (list direction)
+                :datum direction
+                :expected-type '(member :input :output))))
+    (unless (funcall predicate stream)
+      (error 'simple-type-error
+             :format-control "Not an ~A stream, ~S, although ~S ~
+                              was provided as DIRECTION."
+             :format-arguments (list kind stream direction)
+             :datum stream
+             :expected-type `(satisfies ,predicate)))))
+
+(defmethod stream-file-descriptor (stream &optional direction)
+  (declare (ignore direction))
+  (bug-or-error stream 'stream-file-descriptor))
+
+(defmethod stream-file-descriptor ((stream two-way-stream) &optional (direction
+                                                                      :input))
+  (stream-file-descriptor
+   (case direction
+     (:input  (two-way-stream-input-stream stream))
+     (:output (two-way-stream-output-stream stream)))
+   direction))
+
+(defmethod stream-file-descriptor ((stream file-stream) &optional (direction
+                                                                   :input))
+  (si:file-stream-fd stream))
+
+
+;;; Setup
 
 (eval-when (:compile-toplevel :execute)
   (defconstant +conflicting-symbols+ '(cl:close cl:stream-element-type cl:input-stream-p
